--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,9 @@
 ###############################################################################
 * text=auto
 *.json text eol=lf
+*.cs text eol=lf
+*.config text eol=lf
+*.txt text eol=lf
 ###############################################################################
 # Set default behavior for command prompt diff.
 #
